--- a/src/main/resources/public/css/tables.css
+++ b/src/main/resources/public/css/tables.css
@@ -32,17 +32,11 @@
 .add-table-modal{
     background-color: white;
     border: 1px solid var(--text-dark);
-    width: 60%;
+    width: 70%;
     height:80% ;
     border-radius: 10px;
     overflow: hidden;
    
-}
-.spreadsheet-select,.sheet-select{
-    height: 3rem;
-
-    width: 100%;
-    
 }
 .row-link input{
     width: 75%;
@@ -79,4 +73,36 @@
     display: inline-block;
     overflow: hidden;
     height: 0 !important;
+}
+.select-spreadsheet{
+    border-end-end-radius: 10px;
+    border-top-right-radius: 10px;
+    
+    background-color: rgb(185, 185, 185);
+}
+.table-name{
+    border-radius: 10px;
+
+}
+.add-column{
+    background-color:var(--text-dark) ;
+    color: var(--text-light);
+}
+.add-column:hover{
+    background-color:var(--text-dark) ;
+    color: var(--text-light);
+}
+.select-sheet{
+    border-end-end-radius: 10px;
+    border-top-right-radius: 10px;
+    
+    background-color: rgb(185, 185, 185);
+}
+.create-table{
+    background-color:var(--text-dark) ;
+    color: var(--text-light);
+}
+.create-table:hover{
+    background-color:var(--text-dark) ;
+    color: var(--text-light);
 }
